style sheet half works, but half doesn't??

--- a/Sinatra/views/index.erb
+++ b/Sinatra/views/index.erb
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <title>Twitter Updates</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="/twitter-updates.css">
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
   </head>
 <body>
   <h1 class="header">Twitter Updates</h1>
-  <a href="https://twitter.com/owlcity"><img src="../../images/owl_city_twitter.jpg" class="twitter" target="_blank"></a>
+  <a href="https://twitter.com/owlcity" target="_blank"><img src="https://lh6.googleusercontent.com/NlYclWqR1AG16aSHp0LQ3IawUyJVVxjleguEiENhJt7tJyCxNDJ48TsT_3HJZNW5nH8jog=w1375-h630" class="twitter"></a>
 </body>
